--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -1383,19 +1383,50 @@ These instructions only provide a starting point for testers to work on; testers
 
 . Adding a resume entry via `addEntry`
 
-.. Test case: `addEntry ~work #python #data t/DataKinetics Corp s/Dashboard visualisation expert d/May 2010 - August 2015` +
-   Expected: First resume entry is added to the list of entries. Details of the added entry shown in the status message. Timestamp in the status bar is updated.
-.. Test case: `addEntry ~work #python #data t/DataKinetics Corp s/Dashboard visualisation expert d/May 2010 - August 2015` +
-   Expected: No entry is created. The status message indicates that this entry already exists.
-.. Other incorrect delete commands to try: `add`, `add x` (where x is missing some arguments) +
-   Expected: Similar to previous.
+.. Test case: +
+`addEntry ~work #python #data t/DataKinetics Corp s/Dashboard visualisation expert d/May 2010 - August 2015` +
+Expected: First resume entry is added to the list of entries. Details of the added entry shown in the status message. Timestamp in the status bar is updated.
+
+.. Test case: +
+`addEntry ~work #python #data t/DataKinetics Corp s/Dashboard visualisation expert d/May 2010 - August 2015` +
+`addEntry ~work #python #data t/DataKinetics Corp s/Dashboard visualisation expert d/May 2010 - August 2015` +
+Expected: No entry is created. The status message indicates that this entry already exists.
+
+.. Other `addEntry` commands to try: `addEntry`, `addEntry t/Google s/Intern d/Jan 2017 - Apr 2019` +
+   Expected: No entry created, with the status message indicating that the command format is invalid.
 
 . Adding a resume entry via `nus`
 
-.. Test case: `nus ta ma1101r` +
-   Expected: Similar to the `addEntry` positive test case.
-.. Test case: `nus teaching asst ma1101r` +
-   Expected: Similar to the `addEntry` duplicate entry test case.
+.. Test case: +
+`nus ta ma1101r` +
+Expected: Similar to the `addEntry` positive test case.
+.. Test case: +
+`nus ta ma1101r` +
+`nus teaching asst ma1101r` +
+Expected: Similar to the `addEntry` duplicate entry test case.
+
+=== Manipulating tags
+
+.. Test case: +
+`nus ta ma1101r` +
+`tag add [index of created entry] #nus` +
+Expected: Adds the tag `nus` to the entry.
+
+.. Test case: +
+`nus cs2103t` +
+`tag retag [index of created entry] ~education #software_eng #java #module` +
+Expected: Retags the entry with `software_eng`, `java`, and `module`
+
+=== Using templates
+
+.. Test case: +
+Create a template.txt file with the correct format
+`loadtemplate template.txt` +
+Expected: The template should be displayed in the application.
+
+.. Test case: +
+`loadtemplate invalidpath.txt` +
+Expected: No template is loaded. The status message indicates that the file cannot be found.
 
 === Saving data
 
